kubernetes/skywalker/application/oauth2-proxy/oauth2-proxy.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: oauth2-proxy

spec:
  gateways:
    - cluster/feldman-tech
  hosts:
    - oauth2-proxy.feldman.tech
  http:
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: oauth2-proxy
            port:
              number: 4180
